# spectr

./: .gitignore  CMakeLists.txt  FindFFMPEG.cmake  FindMad.cmake  README.md  clean.sh  debug.sh  dir-prepare.sh  release.sh
fonts/: README.md
src/: config.h  defines.h  spectr.c  spectr_types.h  types.h
src/decoding/: decode.c  decode.h  ftype.c  ftype.h  raw.c  raw.h  stat.c  stat.h
src/decoding/quirks/: mp3.c  mp3.h
src/rendering/: glinit.c  glinit.h  glutils.c  glutils.h  render.c  render.h
src/spectr/: config.h  constants.h  spectr.c
src/spectr/decoding/: decode.c  ftype.c  ftype.h  raw.c  raw.h  stat.c  stat.h
src/spectr/decoding/quirks/: mp3.c
src/spectr/rendering/: glinit.c  glinit.h  render.c  render.h  text.c  text.h
src/spectr/transform/: attr.c  fourier.c  fourier.h
src/spectr/util/: bitwise.c  bitwise.h  complex.h  fonts.c  math.h  path.c  path.h
src/transform/: attr.c  attr.h  fourier.c  fourier.h
src/util/: bitwise.c  bitwise.h  complex.c  complex.h  fonts.c  fonts.h  math.c  math.h
